--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "Apache-2.0 OR MIT"
 edition = "2018"
 
 [dependencies]
-dioxus = { version = "0.2.0", features = ["html"] }
+dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["html"] }
 
 [workspace]
 members = ["gen"]
